--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,30 @@ body,
     height: 100%;
     margin: 0;
 }
+.flex-container {
+    display: flex;
+    width: 700px;
+    height: 300px;
+    justify-content: space-between;
+}
+.flex-container div {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: #daa520;
+}
+.flex-container div:nth-of-type(1) {
+    align-self: flex-start;
+}
+.flex-container div:nth-of-type(2) {
+    align-self: center;
+}
+.flex-container div:nth-of-type(3) {
+    align-self: flex-end;
+}
+.flex-container div:nth-of-type(4) {
+    align-self: center;
+}
+.flex-container div:nth-of-type(5) {
+    align-self: flex-start;
+}
